# ai-platform-data

./: .gitignore  README.md  START_MIRRORING.command  TECHNICAL_CHANGE_LOG.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
.scannerwork/: report-task.txt
books/enriched/: .gitkeep  A Philosophy of Software Design.json  AI Agents In Action.json  AI Agents and Applications.json  AI Engineering Building Applications.json  AntiPatterns.json  Architecture Patterns with Python.json  Building LLM Powered Applications.json  Building Microservices.json  Building Python Microservices with FastAPI.json  C++ Concurrency in Action.json  Data-Oriented Design.json  Designing Data-Intensive Applications.json  Designing Machine Learning Systems An Iterative Process for Production-Ready Applications.json  Effective-Python.json  Effective_Modern_C++.json  Fluent Python 2nd.json  Game Programming Gems 1.json  Game Programming Gems 2.json  Game Programming Gems 3.json  Game Programming Gems 4.json  Game Programming Gems 6.json  Game Programming Gems 7.json  Game Programming Gems 8.json  (+22 more)
docker/: Dockerfile.test  docker-compose.dev.yml  docker-compose.yml
docs/: CODE_REFERENCE_ENGINE_DESIGN.md  CODE_REFERENCE_ENGINE_SETUP.md  EMBEDDING_MODEL.md  NEO4J_SEEDING_GUIDE.md  NETWORK_ARCHITECTURE.md  SCHEMA_REFERENCE.md
mappings/: README.md
platform_control/: Platform_Control.command  README.md  config.json  main.py
repos/: repo_registry.json
schemas/: .gitkeep  book_enriched.schema.json  book_enriched_chapters.schema.json  book_metadata.schema.json  book_raw.schema.json  concept_mapping.schema.json  repo_concept_point.schema.json  repo_metadata.schema.json  repo_registry.schema.json  taxonomy.schema.json  taxonomy_registry.schema.json
scripts/: __init__.py  auto_map_concepts.py  extract_metadata.py  index_code_from_github.py  index_repo_concepts.py  migrate.py  migrate_raw_books.py  mirror_all_repos.sh  seed_all.py  seed_database.sh  seed_neo4j.py  seed_qdrant.py  sync_from_enhancer.py  trigger_mirrors.sh  validate_enriched_books.py  validate_raw_books.py  validate_seed.py
src/: __init__.py
taxonomies/: .gitkeep  taxonomy_registry.json
tests/: __init__.py  conftest.py
(+967 files in other folders)
